<resources>
    <string name="app_name">南音</string>
    <string name="main">首页</string>
    <string name="avbtn">音频</string>
    <string name="audio_video">音频</string>
    <string name="instrument">乐器</string>
    <string name="club">社团介绍</string>
    <string name="aboutus">关于我们</string>
    <string name="aboutme">我</string>
    <string name="instrumentlist">乐器列表</string>
    <string name="all">所有信息</string>
    <string name="instrumentsituation">乐器详情</string>
    <string name="nowinstrument">当前乐器</string>
    <string name="someclub">部分社团</string>
    <string name="aboutus2">素琴弦已绝，不绝是南音</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="changepassword">修改密码</string>
    <string name="registerday">注册日期</string>
    <string name="yourcomment">你的评论</string>
    <string name="username">用户名</string>
    <string name="logout">注销登录</string>
    <string name="oldpassword">旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="confrimpassword">确认密码</string>
    <string name="allrecord">所有评论</string>
    <string name="register">注册</string>
</resources>
