<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@null"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/video_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/main"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </android.support.v7.widget.Toolbar>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:id="@+id/avBtn"
           android:layout_width="0dp"
           android:layout_height="150dp"
           android:layout_weight="1"
           android:text="@string/audio_video"
           android:textColor="#000000"
           android:textSize="25sp"
           android:layout_gravity="center_horizontal"
           android:background="@color/avbtn"/>
       <Button
           android:id="@+id/instrumentBtn"
           android:layout_width="0dp"
           android:layout_height="150dp"
           android:layout_weight="2"
           android:layout_gravity="center_horizontal"
           android:text="@string/instrument"
           android:textColor="#000000"
           android:textSize="25sp"
           android:background="@color/instrumentbtn"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/clubBtn"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/club"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:background="@color/clubbtn"/>
        <Button
            android:id="@+id/aboutumeBtn"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/aboutme"
            android:textColor="#000000"
            android:textSize="25sp"
            android:background="@color/aboutmebtn"/>
    </LinearLayout>
    <Button
        android:id="@+id/aboutuusBtn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/aboutus"
        android:textColor="#000000"
        android:textSize="25sp"
        android:background="@color/aboutusbtn"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="更多功能，敬请期待"
            android:textColor="@color/grey_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="15sp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>


</LinearLayout>