<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIcon="@mipmap/back7"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/record_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/instrumentsituation"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="horizontal"
        android:background="@mipmap/whiteletter"
        android:scaleType="fitXY">

        <TextView
            android:id="@+id/nowrecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="17dp"
            android:singleLine="true"
            android:text="@string/nowinstrument"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingTop="40dp"
            android:layout_below="@id/nowrecord">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_margin="10dp"
                android:id="@+id/instrumentImg"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:layout_toRightOf="@+id/instrumentImg"
                android:id="@+id/instrumentnameTv"
                android:layout_width="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/solvetable"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/instrument"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:background="@drawable/bg_edittext_selector"
            android:gravity="top"
            android:minLines="6"
            android:padding="5dip"
            android:textSize="15dip" />

    </LinearLayout>


</LinearLayout>